Fix pagination spacing and text input padding.
omeka/omeka-s#2168

--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -78,7 +78,7 @@ textarea {
     border-radius: 0;
     height: 1.5 * $spacing-l;
     border: 1px solid $light;
-    padding: ($spacing-s - 1px) $spacing-l;
+    padding: ($spacing-s - 1px) $spacing-s;
     margin: 0;
 }
 
@@ -384,6 +384,7 @@ nav.pagination {
 
 .pagination form {
     min-width: 3 * $spacing-l;
+    margin-right: $spacing-m;
 }
 
 .pagination form,
@@ -393,6 +394,10 @@ nav.pagination {
     display: inline-block;
     vertical-align: top;
     height: 1.5 * $base-line-height;
+}
+
+.pagination-buttons {
+    margin-right: $spacing-m;
 }
 
 .pagination .button {
@@ -410,11 +415,6 @@ nav.pagination {
     opacity: .5;
     color: $gray;
     background-color: white;
-}
-
-.pagination form,
-.pagination .last {
-    margin-right: $spacing-s;
 }
 
 .pagination input {
